Fixed responsiveness on Mobile

--- a/index.css
+++ b/index.css
@@ -1,175 +1,178 @@
 body {
-    font-family: "Lexend Deca", sans-serif;
-    font-family: "Big Shoulders Display", cursive;
-    font-family: "Lexend Deca", sans-serif;
-    font-size: 1rem;
-    background-color: hsl(0, 0%, 95%);
-    height: 100%;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  
-  main{
-    margin: auto;
-    width: 100%;
-  }
+  font-family: "Lexend Deca", sans-serif;
+  font-family: "Big Shoulders Display", cursive;
+  font-family: "Lexend Deca", sans-serif;
+  font-size: 1rem;
+  background-color: hsl(0, 0%, 95%);
+  height: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
-  /* layout */
+/* LAYOUT */
 
-  .main-section{
-    display: flex;
+main {
+  margin: auto;
+  width: 100%;
+}
+
+.main-section {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin: 3em auto;
+}
+
+.container {
+  width: 30%;
+  padding: 2rem;
+  margin: 0 auto;
+  margin-bottom: 2em;
+}
+
+.container1 {
+  background-color: hsl(31, 77%, 52%);
+  border-radius: 8px;
+}
+
+.container2 {
+  background-color: hsl(184, 100%, 22%);
+  border-radius: 8px;
+}
+
+.container3 {
+  background-color: hsl(179, 100%, 13%);
+  border-radius: 8px;
+}
+
+/* -------TYPOGRAPHY------- */
+
+.first_paragraph {
+  color: hsla(0, 0%, 100%, 0.75);
+  font-size: 1rem;
+}
+
+.heading {
+  color: hsl(0, 0%, 95%);
+  font-size: 1.8rem;
+  font-weight: 700px;
+  letter-spacing: -2px;
+}
+
+/* STYLE */
+
+.button {
+  background-color: hsl(0, 0%, 95%);
+  width: 120px;
+  height: 35px;
+  padding: 0.2rem;
+  margin-top: 40px;
+  border: none;
+  font-family: inherit;
+  border-radius: 60px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.button1 > a {
+  color: hsl(31, 77%, 52%);
+  text-decoration: none;
+  border: none;
+}
+
+.button2 {
+  color: hsl(184, 100%, 22%);
+}
+
+.button3 {
+  color: hsl(179, 100%, 13%);
+}
+
+.button:hover {
+  border: 2px solid hsl(0, 0%, 95%);
+  color: hsl(0, 0%, 95%);
+}
+
+.button1 > a:hover {
+  background-color: hsl(31, 77%, 52%);
+  color: hsl(0, 0%, 95%);
+}
+
+.button1:hover {
+  background-color: hsl(31, 77%, 52%);
+}
+
+.button2:hover {
+  background-color: hsl(184, 100%, 22%);
+}
+
+.button3:hover {
+  background-color: hsl(179, 100%, 13%);
+}
+
+/* RESPONSIVENESS AND MEDIA QUERIES */
+
+@media screen and (max-width: 375px) {
+  .main-section {
+    width: 80%;
+  }
+  .container {
     width: 60%;
-    margin: auto;
+    padding: 1.5rem;
+    margin-bottom: 2em;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .main-section {
+    display: flex;
+    flex-direction: row;
+    width: 70%;
     height: 100vh;
     align-items: center;
-
   }
-
-  .container{
-    width: 20%;
+  .container {
+    width: 23.8%;
     padding: 3rem;
+    margin: 0;
   }
-  
-   .container1 {
-    background-color: hsl(31, 77%, 52%);
+  .container1 {
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
     box-shadow: 5px 0 3px hsl(184, 100%, 22%);
     margin-right: 2px;
   }
-  
   .container2 {
-    background-color: hsl(184, 100%, 22%);
     box-shadow: 5px 0 3px hsl(179, 100%, 13%);
     margin-right: 2px;
   }
-  
+
   .container3 {
-    background-color: hsl(179, 100%, 13%);
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
+    margin: 0;
   }
-  
-/* -------Typography------- */
 
   .first_paragraph {
     color: hsla(0, 0%, 100%, 0.75);
-    font-size: 1rem;
+    font-size: 1.2rem;
   }
-  
+
   .heading {
     color: hsl(0, 0%, 95%);
-    font-size: 1.8rem;
+    font-size: 2rem;
     font-weight: 700px;
     letter-spacing: -2px;
   }
-
-  /* -------Style------- */
-  
   .button {
-    background-color: hsl(0, 0%, 95%);
-    width: 120px;
-    height: 35px;
+    width: 150px;
+    height: 40px;
     padding: 0.2rem;
-    margin-top: 50px;
     border: none;
     font-family: inherit;
     border-radius: 60px;
     font-weight: bold;
     cursor: pointer;
   }
-
-  .button1 > a{
-    color: hsl(31, 77%, 52%);
-    text-decoration: none;
-    border: none;
-  }
-
-  .button2 {
-    color: hsl(184, 100%, 22%);
-  }
-  
-  .button3 {
-    color: hsl(179, 100%, 13%);
-  }
-
-  .button1 > a:hover{
-    background-color: hsl(31, 77%, 52%);
-    color: hsl(0, 0%, 95%);
-  }
-  
-  .button1:hover{
-    border: 2px solid hsl(0, 0%, 95%);
-    background-color: hsl(31, 77%, 52%);
-    color: hsl(0, 0%, 95%);
-  }
-  
-  .button2:hover{
-    border: 2px solid hsl(0, 0%, 95%);
-    background-color: hsl(184, 100%, 22%);
-    color: hsl(0, 0%, 95%);
-  }
-  
-  .button3:hover{
-    border: 2px solid hsl(0, 0%, 95%);
-    background-color: hsl(179, 100%, 13%);
-    color: hsl(0, 0%, 95%);
-  }
-
-  /* -------responsiveness and media queries------ -*/
-
-  @media(min-width: 1440px){
-    .main-section{
-        display: flex;
-        width: 100%;
-        height: 100vh;
-    }
-  }
-
-  @media(min-width: 1440px){
-    .container{
-        width:33%;
-        padding: 0;
-        font-size: 0.5rem;
-    }
-  }
-
-  @media(max-width: 375px){
-    .main-section{
-        display: flex;
-        flex-direction: column;
-        margin-top: 15px;
-        margin: auto;
-        width: 100%;
-        height: 100%;
-    }
-  }
-
-  @media(max-width: 375px){
-    .container{
-        margin: 15px;
-        width: 50%;
-        border-radius: 8px;
-    }
-  }
-
-  @media(max-width: 375px){
-    .container1{
-        margin-right: 0;
-        box-shadow: none;
-    }
-  }
-
-  @media(max-width: 375px){
-    .container2{
-        margin-right: 0;
-        box-shadow: none;
-    }
-  }
-
-  @media(max-width: 375px){
-    .container3{
-        margin-right: 0;
-    }
-  }
+}
